--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -22,6 +22,10 @@
   width: 350px;
 }
 
+.mar-c {
+  width: 43%;
+}
+
 @media screen and (max-width: 1600px) {
   .fixed-img-size {
     width: 300px;
@@ -55,14 +59,25 @@
     margin: 30px 0px;
   }
 
+  .res-top-mar {
+    margin-top: 11rem;
+  }
+
+  .justify-socials {
+    justify-content: center !important;
+  }
+
   .mar-a {
   }
 
   .mar-b {
-    margin-bottom: 80px !important;
+    margin: 0px;
+    margin-bottom: 60px;
   }
 
   .mar-c {
+    width: 372px;
+    margin-bottom: 0px;
   }
 
   .constant-margin {
@@ -126,11 +141,24 @@
   .mc_embed_signup {
     margin: auto !important;
   }
+
+  
+  .res-top-mar-2 {
+    margin-top: 15rem !important;
+  }
 }
 
 @media screen and (max-width: 768px) {
   .ethics-card-2 {
     flex-direction: column-reverse !important;
+  }
+
+  .res-top-mar {
+    margin-top: 13rem !important;
+  }
+
+  
+  .res-top-mar-2 {
   }
 }
 
@@ -167,6 +195,10 @@
 
   .res-margin {
     margin-top: 6rem !important;
+  }
+
+  .res-top-mar-2 {
+    margin-top: 22rem !important;
   }
 }
 
