--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -74,6 +74,10 @@
   .full-width {
     width: 100%;
   }
+
+  .pixabay-img {
+    margin: 0px 30px 0px 0px;
+  }
 }
 
 @media screen and (max-width: 993px) {
@@ -208,6 +212,10 @@
 
   .responsive-card-heading {
     font-size: 40px;
+  }
+
+  .pixabay-img{
+    margin: 8px 3px;
   }
 }
 
